# datasets

./: README.md  hubconf.py  install_aws_cli.sh  install_libjpegturbo.sh  install_opencv.sh  install_uv_kernels.sh  pyproject.toml  setup.py
.devcontainer/: Dockerfile  devcontainer.json
benchmarks/: benchmark_loader.py
datasets/: __init__.py  registry.py  runtime_platform.py  streaming_dataset.py  transforms.py  version.py
datasets/_configs/: __init__.py  imagenet10.py  imagenet100.py  imagenet100_s292.py  imagenet1k.py  imagenet_subsets.py  imagenette.py
datasets/images/: __init__.py  imagenette.py
datasets/prep/: __init__.py  imagenet100_s292.py  imagenet1k.py  imagenet_subsets.py
datasets/utils/: __init__.py  remote_data.py
notebooks/: 01_imagenet1k.ipynb  01_imagenet1k.py  02_imagenet1k_train.ipynb  02_imagenet1k_train.py  03_imagenet100.py  04_imagenet10.py  05_imagenet100_s292.ipynb  05_imagenet100_s292.py  load_dataset.ipynb  test_decoders.ipynb
scripts/: check_train_counts.py  compute_stats.py  sync_train_to_s3.py  sync_val_to_s3.py
tests/: decoder_benchmark.py
visionlab/: __init__.py  version.py
visionlab/dataloaders/fast_loaders/: __init__.py  fast_loader_ffcv.py  fast_loader_litdata.py
visionlab/datasets/: __init__.py  registry.py  version.py
visionlab/datasets/benchmarks/: README.md
visionlab/datasets/cli/: __init__.py  custom_transforms.py  download_rawdata.py  generate_ffcv_dataset.py  generate_lightning_dataset.py  litdata2ffcv.py  rename_with_hash.py  sync_dataset.py
visionlab/datasets/cli/ffcv_writers/: __init__.py  image_label_index_path.py
visionlab/datasets/core/: __init__.py  balanced_splits.py  ffcv_dataset.py  filedir.py  jsonfile.py  matfile.py  remote_dataset.py  source_types.py  streaming_dataset.py  subfolder.py
visionlab/datasets/core/custom_decoders/: __init__.py  pil_center_crop_rgb_decoder.py  resized_crop.py  resized_multi_crop.py
visionlab/datasets/datasets/: __init__.py
visionlab/datasets/datasets/ml/: __init__.py
visionlab/datasets/datasets/ml/imagenet1k/: __init__.py  ffcv_beton.py  image_folder.py  litdata_streaming.py
visionlab/datasets/datasets/ml/images/: __init__.py  imagenetV2.py
visionlab/datasets/datasets/neuro/: __init__.py
visionlab/datasets/datasets/neuro/konkle_72objects/: konkle_72objects.py
visionlab/datasets/utils/: __init__.py  archive_helpers.py  cache_dir.py  find_streaming_datasets.py  images.py  remote_data.py  remote_data_orig.py  s3_auth.py  s3_downloads.py  s3_info.py  sync.py
visionlab/transforms/fastaugs/: functional.py  functional_tensor.py  transforms.py
visionlab/transforms/ffcv_transforms/: __init__.py  flip.py  gaussian_blur.py  gaussian_blur_torch_image.py  random_patch_shuffle.py  random_patch_shuffle_ratio.py  random_rotate90.py  untitled.py
visionlab_datasets/: __init__.py  auth.py  constants.py  registry.py  version.py
visionlab_datasets/cli/: check_dataset.py  datasets.py  generate_lightning_dataset.py  sync_dataset.py
visionlab_datasets/cli/ffcv_writers/: custom_fields.py  image_label.py
visionlab_datasets/datasets/: __init__.py  ffcv_dataset.py  filedir.py  matfile.py  pytorchfile.py  remote_dataset.py  remote_sources.py  source_types.py  streaming_dataset.py  subfolder.py
visionlab_datasets/datasets/custom_decoders/: simple_sample_reader.py
visionlab_datasets/datasets/ml/munging/: README.md
visionlab_datasets/images/: __init__.py  imagenet1k.py  imagenetV2.py
visionlab_datasets/litdata/: find_datasets.py  streaming_dataset.py
visionlab_datasets/litdata/datasets/: imagenet1k.py
visionlab_datasets/litdata/streaming_datasets/: imagenet1k.py
visionlab_datasets/ml/: __init__.py
visionlab_datasets/ml/images/: imagenet1k.py  imagenette.py
visionlab_datasets/ml_training/: __init__.py
visionlab_datasets/ml_training/images/: imagenet1k.py
visionlab_datasets/ml_training/litdata/datasets/: imagenet1k.py
visionlab_datasets/ml_training/munging/: conda_env.sh  conda_env_check.py
visionlab_datasets/munging/: README.md  SOURCES.md  conda_env.sh
visionlab_datasets/neuro/konkle_72objects/: konkle_72objects.py
visionlab_datasets/utils/: __init__.py  archive_helpers.py  cache_dir.py  helpers.py  remote_data.py  s3_auth.py  s3_downloads.py  s3_helpers.py  s3_info.py  s3_list.py  s3_sync.py  sync.py
