[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "visionlab-datasets"         # <-- avoid conflict with HF 'datasets'
version = "0.3.1"
description = "Visionlab dataset utilities"
readme = "README.md"
authors = [
    {name = "George Alvarez", email = "grez72@gmail.com"}
]
requires-python = ">=3.10,<3.13"

dependencies = [
    # Torch stack (includes image decoding via torchvision.io.decode_image)
    "torch>=2.1.0",
    "torchvision>=0.16.0",

    # Lightning litdata for streaming datasets
    "litdata@git+https://github.com/Lightning-AI/litdata.git@main",

    # Image utilities
    "pillow",
    "numpy",
    "tqdm",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-xdist",
    "ruff",
    "ipykernel",
    "nbstripout",
    "ipywidgets",
    "pandas",
    "seaborn",
    "matplotlib",
    "jupyterlab",
]

[tool.setuptools]
# We map the top-level import 'visionlab.datasets' to your folder 'datasets'
package-dir = { "visionlab.datasets" = "datasets" }
# Explicitly list packages so setuptools doesn't miss them.
# If you have subpackages under datasets/, keep adding lines.
packages = [
  "visionlab.datasets",
]

# If you have subpackages under datasets/, add them like:
# "visionlab.datasets.imagenet",
# "visionlab.datasets.places365",
# etc.